@@ -65,6 +65,7 @@ attlist.field &=
     | "richtext"
     | "dict"
     | "multiselection"
+    | "pyson"
   }?
 attlist.field &= attribute fill { "0" | "1" }?
 attlist.field &= attribute yexpand { "0" | "1" }?
