@@ -21,13 +21,13 @@ this repository contains the full copyright notices and license terms. -->
             <field name="act_window_domains" colspan="4"
                 view_ids="ir.act_window_domain_view_list2"/>
             <label name="domain"/>
-            <field name="domain" colspan="3"/>
+            <field name="domain" colspan="3" widget="pyson"/>
             <label name="context"/>
-            <field name="context" colspan="3"/>
+            <field name="context" colspan="3" widget="pyson"/>
             <label name="order"/>
             <field name="order" colspan="3"/>
             <label name="search_value"/>
-            <field name="search_value" colspan="3"/>
+            <field name="search_value" colspan="3" widget="pyson"/>
             <label name="limit"/>
             <field name="limit"/>
         </page>
