@@ -19,7 +19,7 @@ this repository contains the full copyright notices and license terms. -->
         <field name="on_delete" xexpand="0"/>
     </group>
     <label name="condition"/>
-    <field name="condition" colspan="3"/>
+    <field name="condition" colspan="3" widget="pyson"/>
     <label name="limit_number"/>
     <field name="limit_number"/>
     <label name="minimum_time_delay"/>
