@@ -1,3 +1,4 @@
+* Add PYSON widget
 * Allow to define the text color and background color in calendar view
 * Allow to override cache implementation
 * Add button rule
